modules/015-admission-policy-engine/charts/constraint-templates/templates/operation/ingress-class.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: d8ingressclass
  labels:
    heritage: deckhouse
    module: admission-policy-engine
    security.deckhouse.io: operation-policy
  annotations:
    metadata.gatekeeper.sh/title: "Required Ingress Class"
    metadata.gatekeeper.sh/version: 1.0.0
    description: "Required Ingress Class"
spec:
  crd:
    spec:
      names:
        kind: D8IngressClass
      validation:
        openAPIV3Schema:
          type: object
          properties:
            ingressClassNames:
              type: array
              items:
                type: string
  targets:
    - target: admission.k8s.gatekeeper.sh
      code:
        - engine: Rego
          source:
            version: "v1"
            rego: |
              package d8.operation_policies

              violation contains {"msg": msg} if {
                not input.review.operation == "DELETE"
                ingressClass := input.review.object.spec.ingressClassName
                not list_contains(input.parameters.ingressClassNames, ingressClass)
                msg := sprintf("Ingress <%v> has invalid ingress class: %v, allowed: %v", [input.review.object.metadata.name, ingressClass, input.parameters.ingressClassNames])
              }

              list_contains(list, elem) if {
                list[_] == elem
              }
