modules/015-admission-policy-engine/charts/constraint-templates/tests/ingress-class/allowed.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: allowed
  namespace: default
spec:
  ingressClassName: "foo"
