modules/015-admission-policy-engine/charts/constraint-templates/tests/ingress-class/constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: D8IngressClass
metadata:
  name: test
spec:
  enforcementAction: "deny"
  match:
    kinds:
      - apiGroups: ["", "networking", "networking.k8s.io"]
        kinds: ["Ingress"]
  parameters:
    ingressClassNames:
      - "foo"
      - "baz"
