modules/015-admission-policy-engine/charts/constraint-templates/tests/ingress-class/disallowed.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: disallowed
  namespace: default
spec:
  ingressClassName: "bar"
