modules/015-admission-policy-engine/charts/constraint-templates/tests/ingress-class/suite.yaml
kind: Suite
apiVersion: test.gatekeeper.sh/v1alpha1
metadata:
  name: d8ingressclass
tests:
  - name: d8ingressclass
    template: ../../templates/operation/ingress-class.yaml
    constraint: constraint.yaml
    cases:
      - name: example-allowed
        object: allowed.yaml
        assertions:
          - violations: no
      - name: example-disallowed
        object: disallowed.yaml
        assertions:
          - violations: yes
            message: "Ingress <disallowed> has invalid ingress class: bar"
